# llm_airline_policy_app

./: .env.template  .gitignore  .pre-commit-config.yaml  Challenge_description.md  RAG_AIRLINES_APP.postman_collection.json  README.md  pyproject.toml  server.py
src/: __init__.py  app.py
src/api/endpoints/: database.py  query.py
src/modules/rag/: chat_memory.py  document_reader.py  document_splitter.py  embeddings.py  prompts.py  vector_db.py
src/services/: database_service.py  query_service.py
src/static/: script.js  styles.css
src/templates/: index.html
