[tool.poetry]
name = "llm-airline-policy-app"
version = "0.1.0"
description = ""
authors = ["matprezru <matperrub@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.1"
langchain = "^0.3.9"
langchain-community = "^0.3.8"
unstructured = {extras = ["md"], version = "^0.16.8"}
chromadb = "^0.5.20"
langchain-openai = "^0.2.10"
langchain-chroma = "^0.1.4"
sentence-transformers = "^3.3.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
